<resources>
    <string name="app_name">Lists</string>
    <string name="lists">Списки</string>
    <string name="edit">Изменить</string>
    <string name="change_photo">Заменить фото</string>
    <string name="delete">Удалить</string>
    <string name="delete_photo">Удалить фото</string>
    <string name="import_list">Импорт списка</string>
    <string name="all_items_purchased">Отметить все как сложенные</string>
    <string name="all_items_not_purchased">Отметить все как ожидающие</string>
    <string name="sort_by_name">Отсортировать по алфавиту</string>
    <string name="share_list">Пподелиться списком</string>
    <string name="add_position">Добавить запись</string>
    <string name="export_list">"Экспорт списка"</string>
    <string name="checkbox_awaiting">Ожидающие</string>
    <string name="checkbox_folded">Сложенные</string>
    <string name="dialog_selected_title">Выберите список для отправки</string>
    <string name="dialog_selected_btn_share">Поделиться</string>
    <string name="select_list">Выберите чем собираетесь поделиться</string>

    <string name="exit">Выход</string>
    <string name="addPhoto">Добавить фото</string>
    <string name="editPhoto">Изменить фото</string>
    <string name="createPhoto">Сделать фото</string>
    <string name="cancel">Отмена</string>
    <string name="add">Добавить</string>
    <string name="list">Список</string>
    <string name="createNewProduct">Создание нового товара</string>
    <string name="device_no_camera">Ваше устройство не поддерживает съемку</string>
    <string name="not_take_photo">Вы не сделали фото</string>
    <string name="not_selected_photo">Вы не выбрали фото</string>
    <string name="enter_name_product">Введите название</string>
    <string name="import_error">Ошибка при импортировании файла списка</string>
    <string name="export_error">Ошибка при экспорте файла списка</string>
    <string name="export_ok">ok</string>
    <string name="attention">Внимание!</string>
    <string name="need_get_permissions">Необходимо получить разрешения!</string>
    <string name="need_obtain_permissions">Для использования приложения необходимо получить разрешения</string>
    <string name="ok">Ок</string>
    <string name="nameNewList">Название</string>
    <string name="create_new_list">Создание нового списка</string>
    <string name="edit_name_list">Изменение названия списка</string>
    <string name="enter_name_list">Введите название списка</string>
    <string name="selected_colour_list">Цвет списка:</string>
    <string name="camera_or_galery">Выбрать фото из галереи или снять на камеру?</string>
    <string name="where_take_pictures">Откуда возмем фото?</string>
    <string name="galery">Галерея</string>
    <string name="camera">Камера</string>
    <string name="confirmation">Подтверждение</string>
    <string name="delete_select_list">Удалить выбранный список?</string>
    <string name="collected">Сложено:</string>
    <string name="not_collected">Ожидает:</string>
    <string name="add_post">Добавьте запись</string>
    <string name="exit_from_app">Выйти из приложения?</string>
    <string name="yes">Да</string>
    <string name="picture">Изображение</string>
    <string name="touch_for_add_photo">Прикоснитесь для добавления фото</string>

    <string name="select_color">Выберите цвет</string>
    <string name="select">Выбрать</string>
    <string name="custom">Расширено</string>
    <string name="presets">Предустановленные</string>

</resources>
