<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/idNewList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editTextNewList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nameNewList"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textPersonName"
        android:textColorHint="@color/hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="@android:style/Widget.DeviceDefault.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnAdd"
            style="@android:style/Widget.DeviceDefault.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add" />

    </LinearLayout>
</LinearLayout>